# libgrafiks

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  qtqt.pro  renderarea361.cpp
lib/include/: camera.h  gutils.h  model.h  shaper.h
lib/include/coordinates/: coord.h
lib/include/light/: color.h  light.h
lib/include/lines/: antialias.h  bresenham.h  ddanalyzer.h  line.h
lib/include/models/: matrix.h  model.h  transformation.h
lib/include/parse/: ifreader.h  objreader.h  simpreader.h
lib/include/polygons/: convexfiller.h  convexwirer.h  polygon.h
lib/src/: camera.cpp  gutils.cpp  shaper.cpp
lib/src/light/: color.cpp  light.cpp
lib/src/lines/: antialias.cpp  bresenham.cpp  ddanalyzer.cpp  line.cpp
lib/src/models/: matrix.ipp  model.cpp  (+1 more)
provided/: client.cpp  client.h  drawable.h  main.cpp  pageturner.h  renderarea361.cpp  renderarea361.h  window361.cpp  window361.h
test/: common.h  panel.h  parallelogram.h  polygontest.h  randomtest.h  starburst.h  tester.h
test/assignment1/: a1test.h  common.cpp  common.h  parallelogram.h  polygontest.h  randomtest.h  starburst.h
test/assignment2/: a2test.h  triangletest.h
test/assignment3/: a3test.h
test/shared/: polygontest.h
test/simp/: circle.simp  circleleft.simp  circleright.simp  cube.simp  cube2.simp  cubeline.simp  equitriangle.simp  hypercube.simp  interpCheck.simp  matrixcube.simp  mypage4.simp  niceCubeline.simp  page4.simp  page4assembly.simp  page5.simp  rowcube.simp  test1.simp  test2.simp  test3.simp  testobj.simp  threeCubelinesIntersecting.simp  triPrism.simp  z0_face.simp
(+6 files in other folders)
